# PlarbiusV2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: selfplay_main.cpp  train_blueprint_main.cpp  train_hunl_main.cpp
configs/hunl/: action_32gb.cfg  action_default.cfg  bucket_default.cfg  bucket_superhuman_32gb.cfg
configs/training/: kuhn_cfr_plus.json  kuhn_mccfr_experiment.json  leduc_mccfr_baseline.json
docs/: architecture.md  roadmap.md
include/plarbius/cfr/: cfr_plus_trainer.hpp  infoset_checkpoint_io.hpp  infoset_table.hpp  mccfr_trainer.hpp  regret_matcher.hpp  training_config.hpp  training_metrics.hpp
include/plarbius/core/: types.hpp
include/plarbius/eval/: exploitability.hpp  kuhn_exploitability.hpp  leduc_exploitability.hpp  selfplay_evaluator.hpp
include/plarbius/game/: action.hpp  chance_outcome.hpp  game.hpp  game_state.hpp
include/plarbius/games/hunl/: hunl_action_abstraction.hpp  hunl_bucket_config.hpp  hunl_game.hpp
include/plarbius/games/kuhn/: kuhn_game.hpp
include/plarbius/games/leduc/: leduc_game.hpp
include/plarbius/infra/: ipc_table_server.hpp  logger.hpp
include/plarbius/policy/: policy_io.hpp
railway_dashboard/: .env.example  README.md  package-lock.json  package.json  server.js
railway_dashboard/public/: app.js  index.html  styles.css
scripts/: bootstrap.ps1  profile_training.ps1  run_hunl_experiments.ps1  run_kuhn_experiments.ps1  run_leduc_experiments.ps1  train_kuhn.ps1  train_overnight.ps1
src/cfr/: cfr_plus_trainer.cpp  infoset_checkpoint_io.cpp  infoset_table.cpp  mccfr_trainer.cpp  regret_matcher.cpp
src/eval/: exploitability.cpp  kuhn_exploitability.cpp  leduc_exploitability.cpp  selfplay_evaluator.cpp
src/game/: action.cpp
src/games/hunl/: hunl_action_abstraction.cpp  hunl_bucket_config.cpp  hunl_game.cpp
src/games/kuhn/: kuhn_game.cpp
src/games/leduc/: leduc_game.cpp
src/infra/: ipc_table_server.cpp  logger.cpp
src/policy/: policy_io.cpp
tests/: checkpoint_io_test.cpp  hunl_smoke_test.cpp  kuhn_exploitability_test.cpp  kuhn_training_smoke_test.cpp  leduc_exploitability_test.cpp  leduc_smoke_test.cpp  mccfr_importance_test.cpp  mccfr_smoke_test.cpp  policy_io_test.cpp  regret_matcher_test.cpp
